// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EventList /> deletes the event and changes state 1`] = `
<div
  id="event-container"
>
  <h1>
    Events
  </h1>
  <div
    className="spacer-25"
  />
  <Event
    id={2}
    onDeleteError={[Function]}
    onDeleteSuccess={[Function]}
  />
  <Event
    id={3}
    onDeleteError={[Function]}
    onDeleteSuccess={[Function]}
  />
</div>
`;

exports[`<EventList /> matchesSnapshot with default props 1`] = `
<div
  id="event-container"
>
  <h1>
    Events
  </h1>
  <div
    className="spacer-25"
  />
  <Event
    id={1}
    onDeleteError={[Function]}
    onDeleteSuccess={[Function]}
  />
  <Event
    id={2}
    onDeleteError={[Function]}
    onDeleteSuccess={[Function]}
  />
  <Event
    id={3}
    onDeleteError={[Function]}
    onDeleteSuccess={[Function]}
  />
</div>
`;
